--- a/calculator/src/components/Calculator.css
+++ b/calculator/src/components/Calculator.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 
+
 * {
   padding: 0;
   margin: 0;
@@ -10,7 +11,7 @@
 }
 
 body {
-  background-color: burlywood;
+  background-color: #1d2055;
   display: grid;
   place-content: center;
   font-family: "Roboto", sans-serif;
@@ -21,12 +22,12 @@ body {
 .Calculator-base {
   height: 80vh;
   width: 50vh;
-  background-color: black;
+  background-color: #956a7e;
   border-radius: 1rem;
   padding: 1rem;
-  -webkit-box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);
-  -moz-box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);
-  box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);
+  -webkit-box-shadow: 7px 7px 5px 0px rgba(39, 18, 41, 0.75);
+  -moz-box-shadow: 7px 7px 5px 0px rgba(49, 33, 49, 0.75);
+  box-shadow: 7px 7px 5px 0px rgba(48, 32, 47, 0.75);
 }
 
 .wrapper {
@@ -54,33 +55,33 @@ body {
 .btn {
   display: grid;
   place-content: center;
-  background-color: rgb(54, 52, 52);
+  background-color: rgb(67, 41, 68);
   border-radius: 50%;
-  color: white;
+  color: #c79484;
   cursor: pointer;
   font-weight: bold;
 }
 
 .btn:hover {
-  background-color: gray;
+  background-color:#bc9dbb;
 }
 
 .light-gray {
-  background-color: gray;
+  background-color:#bc9dbb;
   color: black;
 }
 
 .light-gray:hover {
-  background-color: white;
+  background-color: #9f8eae;
 }
 
 .orange {
-  background-color: orange;
+  background-color: #4d2b41;
 }
 
 .orange:hover {
-  background-color: white;
-  color: orange;
+  background-color: #c1bba0;
+  color: #956a7e;
 }
 
 .zero {
@@ -89,4 +90,17 @@ body {
   place-content: unset;
   align-items: center;
   padding-left: 2rem;
+}
+
+@media screen and (max-width: 1000px){ /*Pantalla IPhone 12*/
+  .Calculator-base {
+    height: 60vh;
+    width: 40vh;
+    background-color:#956a7e;
+    border-radius: 1rem;
+    padding: 1rem;
+    -webkit-box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);
+    box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);
+  }
 }
